--- a/.melodium-ci/Compo.toml
+++ b/.melodium-ci/Compo.toml
@@ -2,20 +2,19 @@ name = "ci"
 version = "0.1.0"
 
 [dependencies]
-cicd = "^0.9.0"
-distrib = "^0.9.0"
-fs = "^0.9.0"
-http = "^0.9.0"
-javascript = "^0.9.0"
-json = "^0.9.0"
-log = "^0.9.0"
-net = "^0.9.0"
-process = "^0.9.0"
-std = "^0.9.0"
-work = "^0.9.0"
+cicd = "^0.9.1"
+distrib = "^0.9.1"
+fs = "^0.9.1"
+http = "^0.9.1"
+javascript = "^0.9.1"
+json = "^0.9.1"
+log = "^0.9.1"
+net = "^0.9.1"
+process = "^0.9.1"
+std = "^0.9.1"
+work = "^0.9.1"
 
 [entrypoints]
-buildTestAya = "ci::buildTestAya"
-buildTestAyaDirect = "ci/on_image::buildTestAya"
+buildTestAya = "ci/build_test_aya::buildTestAya"
 buildTestAyaEbpf = "ci::buildTestAyaEbpfEntrypoint"
 
