--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,60 +14,6 @@ env:
 permissions: {}
 
 jobs:
-  #buildTestAyaDirect:
-  #  uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.1
-  #  with:
-  #    command: |
-  #      run .melodium-ci/Compo.toml buildTestAyaDirect --github_contexts='$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-  #    artifact-path: 'logs/'
-  #  secrets:
-  #      token: ${{ secrets.GITHUB_TOKEN }}
-  buildTestAya:
-    strategy:
-      fail-fast: false
-      matrix:
-        arch:
-          - aarch64-unknown-linux-gnu
-          - armv7-unknown-linux-gnueabi
-          - loongarch64-unknown-linux-gnu
-          - powerpc64le-unknown-linux-gnu
-          - riscv64gc-unknown-linux-gnu
-          - s390x-unknown-linux-gnu
-          - x86_64-unknown-linux-gnu
-    uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.1
-    with:
-      command: |
-        run .melodium-ci/Compo.toml buildTestAya --targets='[${{ toJSON( matrix.arch ) }}]' --repository_clone_url='"${{ github.repositoryUrl }}"' --repository_clone_ref='"${{ github.ref_name }}"' --github_contexts='$''{{{{ { "github": { "api_url": ${{ toJSON(github.api_url) }}, "repository": ${{ toJSON(github.repository) }}, "sha": ${{ toJSON(github.sha) }} }, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-      artifact-path: 'logs/'
-      artifact-name: 'mel_buildTestAya_${{ matrix.arch }}'
-    secrets:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    permissions:
-      statuses: write
-  buildTestAyaEbpf:
-    uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.1
-    with:
-      command: |
-        run .melodium-ci/Compo.toml buildTestAyaEbpf --repository_clone_url='"${{ github.repositoryUrl }}"' --repository_clone_ref='"${{ github.ref_name }}"' --github_contexts='$''{{{{ { "github": { "api_url": ${{ toJSON(github.api_url) }}, "repository": ${{ toJSON(github.repository) }}, "sha": ${{ toJSON(github.sha) }} }, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-      artifact-path: 'logs/'
-      artifact-name: 'mel_buildTestAyaEbpf'
-    secrets:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    permissions:
-      statuses: write
-    #runs-on: ubuntu-latest
-    #steps:
-    #  - uses: actions/checkout@v5
-    #  - run: |
-    #      .melodium-ci/melodium run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-      # uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.0
-    # with:
-    #   version: 0.9.0
-    #   command: |
-    #     run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-    #   artifact-path: logs/
-    # secrets:
-    #   token: "${{ secrets.GITHUB_TOKEN }}"
   lint:
     runs-on: ubuntu-latest
 
@@ -193,6 +139,41 @@ jobs:
             --exclude integration-test \
             --feature-powerset
 
+  buildTestAya:
+    # Calling Aya CI Mélodium implementation
+    #
+    # Current pipeline implementation is not independant from Github yet
+    # as it runs directly on Github Action runners because
+    # Rust cross build-and-test toolchain rely on specific Github Action runner image.
+    # 
+    # In consequence:
+    # 1. we use `localStep` instead of remotely-operable `stepOn`,
+    # 2. we use a per-arch GA-matrix approach as it is inefficient to
+    #    build multiple targets simultaneously on runners provided by Github,
+    # 3. there are no front time nor resources consumption improvement in current state.
+    # However this implementation is a basis to make Aya integration pipelines fully work in agnostic context using Mélodium.
+    strategy:
+      fail-fast: false
+      matrix:
+        arch:
+          - aarch64-unknown-linux-gnu
+          - armv7-unknown-linux-gnueabi
+          - loongarch64-unknown-linux-gnu
+          - powerpc64le-unknown-linux-gnu
+          - riscv64gc-unknown-linux-gnu
+          - s390x-unknown-linux-gnu
+          - x86_64-unknown-linux-gnu
+    uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.1
+    with:
+      command: |
+        run .melodium-ci/Compo.toml buildTestAya --targets='[${{ toJSON( matrix.arch ) }}]' --repository_clone_url='"${{ github.repositoryUrl }}"' --repository_clone_ref='"${{ github.ref_name }}"' --github_contexts='$''{{{{ { "github": { "api_url": ${{ toJSON(github.api_url) }}, "repository": ${{ toJSON(github.repository) }}, "sha": ${{ toJSON(github.sha) }} }, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
+      artifact-path: 'logs/'
+      artifact-name: 'mel_buildTestAya_${{ matrix.arch }}'
+    secrets:
+        token: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      statuses: write
+
   build-test-aya-ebpf:
     runs-on: ubuntu-latest
 
@@ -262,6 +243,28 @@ jobs:
             printf '  %s\n' "${failures[@]}"
             exit 1
           fi
+
+  buildTestAyaEbpf:
+    # Calling Aya CI Mélodium implementation
+    #
+    # Current pipeline implementation is not independant from Github yet
+    # as it runs directly on Github Action runners because
+    # Rust cross build-and-test toolchain rely on specific Github Action runner image.
+    # 
+    # In consequence:
+    # 1. we use `localStep` instead of remotely-operable `stepOn`,
+    # 2. there are no front time nor resources consumption improvement in current state.
+    # However this implementation is a basis to make Aya integration pipelines fully work in agnostic context using Mélodium.
+    uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.1
+    with:
+      command: |
+        run .melodium-ci/Compo.toml buildTestAyaEbpf --repository_clone_url='"${{ github.repositoryUrl }}"' --repository_clone_ref='"${{ github.ref_name }}"' --github_contexts='$''{{{{ { "github": { "api_url": ${{ toJSON(github.api_url) }}, "repository": ${{ toJSON(github.repository) }}, "sha": ${{ toJSON(github.sha) }} }, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
+      artifact-path: 'logs/'
+      artifact-name: 'mel_buildTestAyaEbpf'
+    secrets:
+        token: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      statuses: write
 
   run-integration-test:
     strategy:
