feat: add xdp dispatcher implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "aya-log-parser",
     "aya-obj",
     "aya-tool",
+    "aya-xdp-dispatcher",
     "ebpf-panic",
     "test-distro",
     "test/integration-common",
@@ -35,6 +36,7 @@ default-members = [
     "aya-log-parser",
     "aya-obj",
     "aya-tool",
+    "aya-xdp-dispatcher",
     "ebpf-panic",
     "test-distro",
     "test/integration-common",
@@ -84,6 +86,7 @@ hashbrown = { version = "0.16.0", default-features = false }
 indoc = { version = "2.0", default-features = false }
 libc = { version = "0.2.105", default-features = false }
 log = { version = "0.4", default-features = false }
+named-lock = { version = "0.4.1", default-features = false }
 network-types = { version = "0.1.0", default-features = false }
 nix = { version = "0.30.1", default-features = false }
 num_enum = { version = "0.7", default-features = false }
@@ -108,6 +111,7 @@ test-log = { version = "0.2.13", default-features = false }
 testing_logger = { version = "0.1.1", default-features = false }
 thiserror = { version = "2.0.3", default-features = false }
 tokio = { version = "1.24.0", default-features = false }
+uuid = { version = "1.19.0", default-features = false }
 walkdir = { version = "2", default-features = false }
 which = { version = "8.0.0", default-features = false }
 xdpilone = { version = "1.0.5", default-features = false }
