--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = { workspace = true, features = ["std"] }
 assert_matches = { workspace = true }
 aya-log = { path = "../../aya-log", version = "^0.2.2", default-features = false }
 aya-obj = { path = "../../aya-obj", version = "^0.2.2", default-features = false }
+aya-xdp-dispatcher = { path = "../../aya-xdp-dispatcher", version = "0.1.0" }
 epoll = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 integration-common = { path = "../integration-common", features = ["user"] }
@@ -40,6 +41,7 @@ tokio = { workspace = true, features = [
     "rt-multi-thread",
     "time",
 ] }
+uuid = { workspace = true, features = ["v4"] }
 xdpilone = { workspace = true }
 
 [build-dependencies]
