--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -111,3 +111,7 @@ path = "src/perf_event_bp.rs"
 [[bin]]
 name = "printk_test"
 path = "src/printk_test.rs"
+
+[[bin]]
+name = "struct_ops_test"
+path = "src/struct_ops_test.rs"
