test: add HID-BPF integration test
Add a test program demonstrating the HID-BPF macros for device event,
report descriptor fixup, and hardware request handlers.

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -115,3 +115,7 @@ path = "src/printk_test.rs"
 [[bin]]
 name = "struct_ops_test"
 path = "src/struct_ops_test.rs"
+
+[[bin]]
+name = "hid_bpf_test"
+path = "src/hid_bpf_test.rs"
