aya-build: try to build when rustup is not found
In some environments, rustup is not availible but cargo and its targets
are. This changes aya-build to try to continue building if rustup is not
found, even with stable Rust. If the Rust channel differs from the
selected toolchain, the user will be warned but a build will still be
attempted.

Fixes: #1329

--- a/aya-build/Cargo.toml
+++ b/aya-build/Cargo.toml
@@ -16,3 +16,5 @@ workspace = true
 [dependencies]
 anyhow = { workspace = true, default-features = true }
 cargo_metadata = { workspace = true }
+rustc_version = { workspace = true }
+which = { workspace = true, features = ["real-sys"] }
