test: add integration tests for ArrayOfMaps and HashOfMaps
Add comprehensive integration tests that verify:
- ArrayOfMaps: set inner Array maps and verify eBPF can access them
- HashOfMaps: set inner HashMap maps and verify eBPF can access them
- Data written by eBPF programs is correctly readable from userspace

The eBPF program writes values to inner maps through the outer
map-of-maps, and the userspace test verifies the values are correct.

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -111,3 +111,7 @@ path = "src/perf_event_bp.rs"
 [[bin]]
 name = "prog_array"
 path = "src/prog_array.rs"
+
+[[bin]]
+name = "map_of_maps"
+path = "src/map_of_maps.rs"
