test: add libbpf compatibility test for btf_maps
Add a Rust eBPF program (btf_maps_plain) that uses only btf_maps,
and a test that uses libbpf-rs to verify libbpf can load it.
This proves our BTF map definitions are compatible with libbpf.

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -13,8 +13,12 @@ rust-version.workspace = true
 [lints]
 workspace = true
 
+[features]
+libbpf-test = ["dep:libbpf-rs"]
+
 [dependencies]
 aya = { path = "../../aya", version = "^0.13.2", default-features = false }
+libbpf-rs = { version = "0.25", optional = true }
 
 [dev-dependencies]
 anyhow = { workspace = true, features = ["std"] }
