test: add libbpf compatibility test for btf_maps
Add a Rust eBPF program (btf_maps_plain) that uses only btf_maps,
and a test that uses libbpf-rs to verify libbpf can load it.
This proves our BTF map definitions are compatible with libbpf.

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -17,6 +17,7 @@ workspace = true
 aya = { path = "../../aya", version = "^0.13.2", default-features = false }
 
 [dev-dependencies]
+libbpf-rs = { workspace = true }
 anyhow = { workspace = true, features = ["std"] }
 assert_matches = { workspace = true }
 aya-log = { path = "../../aya-log", version = "^0.2.2", default-features = false }
