test: add libbpf compatibility test for btf_maps
Add a Rust eBPF program (btf_maps_plain) that uses only btf_maps,
and a test that uses libbpf-rs to verify libbpf can load it.
This proves our BTF map definitions are compatible with libbpf.

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -24,6 +24,7 @@ aya-obj = { path = "../../aya-obj", version = "^0.2.2", default-features = false
 epoll = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 integration-common = { path = "../integration-common", features = ["user"] }
+libbpf-rs = { workspace = true, features = ["vendored"] }
 libc = { workspace = true }
 log = { workspace = true }
 nix = { workspace = true, features = ["mount", "sched"] }
