--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -263,6 +263,7 @@ jobs:
 
           sudo apt update
           sudo apt -y install \
+            gettext \
             liblzma-dev \
             lynx \
             musl-tools \
