--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ futures = { version = "0.3.28", default-features = false }
 glob = { version = "0.3.0", default-features = false }
 hashbrown = { version = "0.16.0", default-features = false }
 indoc = { version = "2.0", default-features = false }
+libbpf-rs = { version = "0.25", default-features = false }
 libc = { version = "0.2.105", default-features = false }
 log = { version = "0.4", default-features = false }
 network-types = { version = "0.1.0", default-features = false }
