feat: implement bpf_prog_test_run

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -97,6 +97,10 @@ name = "test"
 path = "src/test.rs"
 
 [[bin]]
+name = "test_run"
+path = "src/test_run.rs"
+
+[[bin]]
 name = "two_progs"
 path = "src/two_progs.rs"
 
