--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,13 @@ jobs:
 
       - run: cargo +nightly fmt --all -- --check
 
+      - name: Install libbpf-rs prerequisites
+        run: |
+          set -euxo pipefail
+
+          sudo apt update
+          sudo apt -y install autopoint
+
       - run: ./clippy.sh
 
       # On the `aya-rs/aya` repository, regenerate the public API on a schedule.
@@ -102,7 +109,19 @@ jobs:
         with:
           target: ${{ matrix.arch }}
 
+      - name: Install libbpf-rs prerequisites
+        run: |
+          set -euxo pipefail
+
+          sudo apt update
+          sudo apt -y install autopoint
+
       - name: Build
+        env:
+          # Fix for 32-bit ARM: Ubuntu 24.04 GCC defines _TIME_BITS=64 as a built-in,
+          # which requires _FILE_OFFSET_BITS=64 (glibc requirement). We must unset
+          # _TIME_BITS first because the built-in is seen before -D flags by libbpf-sys.
+          CFLAGS_armv7_unknown_linux_gnueabi: "-U_TIME_BITS -D_FILE_OFFSET_BITS=64"
         run: |
           set -euxo pipefail
           cargo hack build --all-targets --feature-powerset \
@@ -262,7 +281,12 @@ jobs:
           sudo udevadm trigger --name-match=kvm || true # kvm is not available on arm64.
 
           sudo apt update
+          # linux-libc-dev provides kernel UAPI headers for libbpf-sys cross-compilation.
+          #
+          # See https://github.com/libbpf/libbpf-sys/issues/137.
           sudo apt -y install \
+            autopoint \
+            linux-libc-dev \
             liblzma-dev \
             lynx \
             musl-tools \
@@ -370,10 +394,47 @@ jobs:
         if: runner.os == 'Linux' && matrix.skip-local != true
         run: cargo xtask integration-test local
 
+      # macOS cross-compilation fixes for libbpf-sys vendored dependencies.
+      #
+      # See https://github.com/libbpf/libbpf-sys/issues/137.
+      - name: Set cross-compilation env for macOS
+        if: runner.os == 'macOS'
+        run: |
+          # Add make wrapper that overrides AR/RANLIB for zlib build.
+          echo "${{ github.workspace }}/ci/bin" >> $GITHUB_PATH
+          # Export env vars, stripping comments and quotes (shell quoting breaks GITHUB_ENV).
+          grep -v '^#' ci/libbpf-sys.env ci/macos-toolchain.env | grep -v '^$' | sed 's/"//g' >> $GITHUB_ENV
+
+      # libbpf-sys cross-compilation workarounds:
+      # - linux-libc-dev provides kernel UAPI headers (installed above)
+      # - LIBBPF_SYS_EXTRA_CFLAGS adds -idirafter for cross-compile header paths
+      # - ac_cv_search_* variables from ci/libbpf-sys.env skip autoconf checks
+      #
+      # See https://github.com/libbpf/libbpf-sys/issues/137.
       - name: Run virtualized integration tests
         if: matrix.download-kernel-images != 'local'
         run: |
           set -euxo pipefail
+
+          # Source cross-compilation env vars for libbpf-sys vendored dependencies.
+          set -a
+          . ci/libbpf-sys.env
+          if [ "$(uname -s)" = "Darwin" ]; then
+            . ci/macos-toolchain.env
+          fi
+          set +a
+
+          arch=$(uname -m)
+          libbpf_sys_extra_cflags=(-idirafter "/usr/include/${arch}-linux-gnu" -idirafter /usr/include)
+          if [ "${arch}" = aarch64 ]; then
+            libbpf_sys_extra_cflags+=(-mno-outline-atomics)
+          fi
+          export LIBBPF_SYS_EXTRA_CFLAGS="${libbpf_sys_extra_cflags[@]}"
+
+          # libbpf-sys forwards LIBBPF_SYS_EXTRA_CFLAGS to libbpf, but the
+          # vendored elfutils build ignores it and only honors CFLAGS/CPPFLAGS.
+          export CFLAGS='-I${{ github.workspace }}/ci/headers'
+
           find test/.tmp -name '*.deb' -print0 | sort -Vz | xargs -t -0 \
             cargo xtask integration-test vm --cache-dir test/.tmp \
               --github-api-token ${{ secrets.GITHUB_TOKEN }}
