aya-{common,ebpf}: Add spin lock support
Add a new `aya-common` crate with a `SpinLock` struct, that wraps
`bpf_spin_lock` and allows to use it in BPF maps.

Add an extension trait `EbpfSpinLock` that provides a `lock` method,
which is a wrapper over `bpf_spin_lock` helper. It returns a
`SpinLockGuard` that calls `bpf_spin_unlock` helper once dropped.

Test that functionality with a simple XDP counter program.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,9 +77,11 @@ jobs:
         run: |
           set -euxo pipefail
           cargo +nightly hack miri test --all-targets --feature-powerset \
+            --exclude aya-common \
             --exclude aya-ebpf \
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
+            --exclude integration-common \
             --exclude integration-ebpf \
             --exclude integration-test \
             --workspace
@@ -129,9 +131,11 @@ jobs:
         run: |
           set -euxo pipefail
           cargo hack build --all-targets --feature-powerset \
+            --exclude aya-common \
             --exclude aya-ebpf \
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
+            --exclude integration-common \
             --exclude integration-ebpf \
             --exclude xtask \
             --workspace
@@ -142,9 +146,11 @@ jobs:
         run: |
           set -euxo pipefail
           cargo hack test --all-targets \
+            --exclude aya-common \
             --exclude aya-ebpf \
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
+            --exclude integration-common \
             --exclude integration-ebpf \
             --exclude integration-test \
             --feature-powerset
@@ -155,9 +161,11 @@ jobs:
         run: |
           set -euxo pipefail
           cargo hack test --doc \
+            --exclude aya-common \
             --exclude aya-ebpf \
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
+            --exclude integration-common \
             --exclude integration-ebpf \
             --exclude integration-test \
             --feature-powerset
