--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -89,6 +89,10 @@ name = "simple_prog"
 path = "src/simple_prog.rs"
 
 [[bin]]
+name = "spin_lock"
+path = "src/spin_lock.rs"
+
+[[bin]]
 name = "strncmp"
 path = "src/strncmp.rs"
 
