uprobe: add adaptive multi attach and links
Keep a single UProbe API and choose attach path by metadata when available.
For pinned/program-info handles, try BPF_TRACE_UPROBE_MULTI first, then
fallback to legacy perf attach. Batch multi symbol resolution/cookies and
keep link lifecycle handling unified.

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -113,5 +113,9 @@ name = "uprobe_cookie"
 path = "src/uprobe_cookie.rs"
 
 [[bin]]
+name = "uprobe_multi"
+path = "src/uprobe_multi.rs"
+
+[[bin]]
 name = "perf_event_bp"
 path = "src/perf_event_bp.rs"
