ebpf: Add helper for safer loading of globals

--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -29,6 +29,7 @@ once_cell = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
+aya-ebpf = { path = "../ebpf/aya-ebpf" }
 tempfile = { workspace = true }
 test-case = { workspace = true }
 
