--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -26,6 +26,7 @@ libc = { workspace = true }
 log = { workspace = true }
 object = { workspace = true, features = ["elf", "read_core", "std", "write"] }
 once_cell = { workspace = true }
+scopeguard = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
