--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ bytes = { version = "1", default-features = false }
 cargo_metadata = { version = "0.23.0", default-features = false }
 clap = { version = "4", default-features = false }
 const-assert = { version = "1.0.1", default-features = false }
+criterion = { version = "0.5.1", default-features = false }
 dialoguer = { version = "0.12", default-features = false }
 diff = { version = "0.1.13", default-features = false }
 env_logger = { version = "0.11", default-features = false }
