--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = { workspace = true, features = ["std"] }
 assert_matches = { workspace = true }
 aya-log = { path = "../../aya-log", version = "^0.2.2", default-features = false }
 aya-obj = { path = "../../aya-obj", version = "^0.2.2", default-features = false }
+criterion = { workspace = true, features = ["cargo_bench_support"] }
 epoll = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 integration-common = { path = "../integration-common", features = ["user"] }
@@ -42,6 +43,10 @@ tokio = { workspace = true, features = [
     "time",
 ] }
 xdpilone = { workspace = true }
+
+[[bench]]
+harness = false
+name = "ring_buf"
 
 [build-dependencies]
 anyhow = { workspace = true }
