--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = { workspace = true, features = ["std"] }
 assert_matches = { workspace = true }
 aya-log = { path = "../../aya-log", version = "^0.2.2", default-features = false }
 aya-obj = { path = "../../aya-obj", version = "^0.2.2", default-features = false }
+criterion = { version = "0.5.1", features = ["cargo_bench_support"] }
 epoll = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 integration-common = { path = "../integration-common", features = ["user"] }
@@ -57,3 +58,23 @@ cargo_metadata = { workspace = true }
 # features.
 integration-ebpf = { path = "../integration-ebpf" }
 xtask = { path = "../../xtask" }
+
+[[bench]]
+harness = false
+name = "ring_buf_next_vs_drain"
+
+[[bench]]
+harness = false
+name = "ring_buf_drain_fast"
+
+[[bench]]
+harness = false
+name = "ring_buf_next_vs_drain_epoll"
+
+[[bench]]
+harness = false
+name = "ring_buf_next_vs_drain_epoll_bursty"
+
+[[bench]]
+harness = false
+name = "ring_buf_next_vs_drain_epoll_notify_batch"
